--- a/src/app/edit-contacts/edit-contacts.component.css
+++ b/src/app/edit-contacts/edit-contacts.component.css
@@ -1,14 +1,49 @@
 .col-md-6.contact-play-div {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 a.play-record{
-    font-size: 30px;
-    margin-right: 15px;
-    cursor: pointer;
+  font-size: 30px;
+  margin-right: 15px;
+  cursor: pointer;
 }
 .col-md-6.contact-play-div  p{
-    margin: auto;
-    margin-left: 0;
+  margin: auto;
+  margin-left: 0;
 }
 
+
+.refine-text{
+  color: red !important;
+  text-decoration: underline !important;
+  font-weight: 700;
+  cursor: pointer !important;
+}
+
+.icon {
+  padding: 10px;
+  min-width: 40px;
+}
+
+.loading-phone{
+  position: relative;
+  width: 35px;
+  top: 35px;
+  left: 335px;
+}
+.red-col{
+  color: red;
+}
+
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  margin: 0;
+}
+
+
+.scrolling{
+  overflow: scroll;
+}
